# ECG

./: README.md  contributors.txt
ecg_assignment01/ex01/: CMakeCache.txt  Makefile  cmake_install.cmake  ex01
ecg_assignment01/ex01/src/: Ex01.cpp  Makefile  cmake_install.cmake
ex01/src/: Ex01.cpp
ex02/include/: Ex02.h
ex02/model/: bunny.m
ex02/src/: Ex02.cpp
ex03/include/: Ex03.h
ex03/src/: CMakeLists.txt  Ex03.cpp  MeshObj.cpp  ObjLoader.cpp
ex04/: CMakeLists.txt
ex04/include/: CameraController.h  Ex04.h
ex04/shader/: ndc.frag  ndc.vert
ex04/src/: CMakeLists.txt  CameraController.cpp  Ex04.cpp  MeshObj.cpp  ObjLoader.cpp
ex05/: CMakeLists.txt
ex05/include/: CameraController.h  Ex05.h
ex05/shader/: material_and_light.frag  material_and_light.vert
ex05/src/: CMakeLists.txt  Ex05.cpp  MeshObj.cpp  ObjLoader.cpp
ex06/: CMakeLists.txt
ex06/include/: Ex06.h  MeshObj.h
ex06/shader/: material_and_light.frag  material_and_light.vert
ex06/src/: CMakeLists.txt  CameraController.cpp  Ex06.cpp  MeshObj.cpp  ObjLoader.cpp
ex07/: CMakeLists.txt
ex07/include/: Ex07.h  MeshObj.h
ex07/shader/: texture.frag  texture.vert
ex07/src/: CMakeLists.txt  Ex07.cpp  MeshObj.cpp  ObjLoader.cpp
ex08/: CMakeLists.txt
ex08/include/: CameraController.h
ex08/shader/: multi_texture.frag  multi_texture.vert  normal_mapping.frag  normal_mapping.vert
ex08/src/: CMakeLists.txt  CameraController.cpp  Ex08.cpp  MeshObj.cpp  ObjLoader.cpp
ex09/: CMakeLists.txt
ex09/include/: CameraController.h  Ex09.h  MeshObj.h  Utils.h
ex09/shader/: hair.frag  hair.geom  hair.vert  hair_lines.geom  simple.frag  simple.vert
ex09/src/: CMakeLists.txt  Ex09.cpp  MeshObj.cpp  ObjLoader.cpp
